--- a/package.json
+++ b/package.json
@@ -1,89 +1,26 @@
 {
-  "_from": "@fortawesome/fontawesome-free",
-  "_id": "@fortawesome/fontawesome-free@5.9.0",
-  "_inBundle": false,
-  "_integrity": "sha512-g795BBEzM/Hq2SYNPm/NQTIp3IWd4eXSH0ds87Na2jnrAUFX3wkyZAI4Gwj9DOaWMuz2/01i8oWI7P7T/XLkhg==",
-  "_location": "/@fortawesome/fontawesome-free",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "@fortawesome/fontawesome-free",
-    "name": "@fortawesome/fontawesome-free",
-    "escapedName": "@fortawesome%2ffontawesome-free",
-    "scope": "@fortawesome",
-    "rawSpec": "",
-    "saveSpec": null,
-    "fetchSpec": "latest"
-  },
+  "name": "palette",
+  "version": "1.0.0",
+  "description": "code jam palette",
+  "main": "index.js",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore ."
   },
-  "_requiredBy": [
-    "#DEV:/",
-    "#USER"
-  ],
-  "_resolved": "https://registry.npmjs.org/@fortawesome/fontawesome-free/-/fontawesome-free-5.9.0.tgz",
-  "_shasum": "1aa5c59efb1b8c6eb6277d1e3e8c8f31998b8c8e",
-  "_spec": "@fortawesome/fontawesome-free",
-  "_where": "E:\\WEB\\palette",
-  "author": {
-    "name": "Dave Gandy",
-    "email": "dave@fontawesome.com",
-    "url": "http://twitter.com/davegandy"
-  },
-  "bugs": {
-    "url": "http://github.com/FortAwesome/Font-Awesome/issues"
-  },
-  "bundleDependencies": false,
-  "contributors": [{
-      "name": "Brian Talbot",
-      "url": "http://twitter.com/talbs"
-    },
-    {
-      "name": "Travis Chase",
-      "url": "http://twitter.com/supercodepoet"
-    },
-    {
-      "name": "Rob Madole",
-      "url": "http://twitter.com/robmadole"
-    },
-    {
-      "name": "Geremia Taglialatela",
-      "url": "http://twitter.com/gtagliala"
-    },
-    {
-      "name": "Mike Wilkerson",
-      "url": "http://twitter.com/mw77"
-    }
-  ],
-  "dependencies": {
-    "lint": "^0.7.0"
-  },
-  "deprecated": false,
-  "description": "The iconic font, CSS, and SVG framework",
-  "engines": {
-    "node": ">=6"
-  },
-  "homepage": "https://fontawesome.com",
-  "keywords": [
-    "font",
-    "awesome",
-    "fontawesome",
-    "icon",
-    "svg",
-    "bootstrap"
-  ],
-  "license": "(CC-BY-4.0 AND OFL-1.1 AND MIT)",
-  "main": "js/fontawesome.js",
-  "name": "@fortawesome/fontawesome-free",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FortAwesome/Font-Awesome.git"
+    "url": "git+https://github.com/BaturaAndrew/palette.git"
   },
-  "style": "css/fontawesome.css",
-  "version": "5.9.0",
-  "devDependencies": {
+  "keywords": [
+    "codejam",
+    "dom-pallete"
+  ],
+  "author": "Batura Andrew",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/BaturaAndrew/palette/issues"
+  },
+  "homepage": "https://github.com/BaturaAndrew/palette/#readme",
+  "dependencies": {
     "eslint": "^6.0.1"
   }
 }
